<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin50"
    android:layout_marginRight="@dimen/margin50"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin100"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize40" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:text="Sign in to continue"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin150"
            android:maxLines="1"
            android:text="@string/mobile_number"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/et_mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="+910********91"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30"
            android:text="@string/password"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="*********"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30"
            android:background="@drawable/oval"
            android:text="Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:text="@string/dont_have_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_signup"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_marginTop="@dimen/margin15"
                android:text="@string/sign_up"
                android:textSize="@dimen/textsize15"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>