<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DashBoardActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_address"
        android:text=""
        android:gravity="center"
        android:drawableLeft="@drawable/ic_pin"
        android:drawablePadding="@dimen/margin5"
        android:textSize="@dimen/textsize15"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/ll_joingroup">

            <ImageView
                android:layout_width="@dimen/margin100"
                android:layout_height="@dimen/margin100"
                android:src="@drawable/ic_join_group"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_group"
                android:textSize="@dimen/textsize15"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_view_group">

            <ImageView
                android:layout_width="@dimen/margin100"
                android:layout_height="@dimen/margin100"
                android:src="@drawable/ic_view_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_group"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize15" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/ll_near_me">

            <ImageView
                android:layout_width="@dimen/margin100"
                android:layout_height="@dimen/margin100"
                android:src="@drawable/ic_near_me"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_me"
                android:textSize="@dimen/textsize15"
                android:textColor="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/ll_emergency">

            <ImageView
                android:layout_width="@dimen/margin100"
                android:layout_height="@dimen/margin100"
                android:src="@drawable/ic_emergency"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency"
                android:textSize="@dimen/textsize15"
                android:textColor="@color/black"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/ll_logout">

            <ImageView
                android:layout_width="@dimen/margin100"
                android:layout_height="@dimen/margin100"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="@dimen/textsize15"
                android:textColor="@color/black"/>

        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

        </LinearLayout>-->
    </LinearLayout>

</LinearLayout>