<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="@dimen/margin5"
        card_view:cardElevation="@dimen/margin5"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin5"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="Name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/margin10"
                            android:gravity="center_vertical"
                            android:padding="@dimen/margin5"
                            android:text="@string/phone_no"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/tv_phonenumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/margin10"
                                android:gravity="center_vertical"
                                android:padding="@dimen/margin5"
                                android:text="@string/address"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/tv_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/margin10"
                                android:gravity="center_vertical"
                                android:padding="@dimen/margin5"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/black" />

                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/margin10"
                            android:gravity="center_vertical"
                            android:padding="@dimen/margin5"
                            android:text="@string/type"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/tv_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/margin10"
                            android:gravity="center_vertical"
                            android:padding="@dimen/margin5"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>